# rpg-club-app

./: .dockerignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/actions/setup/: action.yaml
.github/workflows/: rust.yaml  setup.yaml
bot/: .gitignore  index.ts  package.json  vercel.json
bot/api/: index.js
bot/commands/: listgames.ts  ping.ts
bot/public/: index.html
bot/scripts/: register.ts
bot/supabase/: games.ts
bot/utils/: types.ts
docker/api/: Dockerfile
docker/bot/: Dockerfile
docker/compose/: docker-compose.yml
docker/rust-builder/: Dockerfile
docker/web/: Dockerfile
old-bot/: index.ts
old-bot/api/: index.js
old-bot/commands/: register.ts
old-bot/events/: register.ts
old-bot/supabase/: client.ts
rpg_club_api/: Cargo.toml
rpg_club_api/src/: main.rs
rpg_club_bot/: Cargo.toml
rpg_club_bot/src/: main.rs
rpg_club_bot/src/commands/: add_game.rs  list_games.rs  mod.rs  ping.rs  update_game.rs
rpg_club_core/: Cargo.toml
rpg_club_core/src/: app.rs  lib.rs
rpg_club_db/: Cargo.toml
rpg_club_db/db/: init.sql
rpg_club_db/src/: connection.rs  db.rs  games.rs  lib.rs  main.rs
rpg_club_model/: Cargo.toml
rpg_club_model/src/: lib.rs
rpg_club_types/: Cargo.toml  build.rs
rpg_club_web/: package.json  pnpm-lock.yaml  vite.config.ts
rpg_club_web/src/: core.ts  http.ts
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/: types.ts
src/routes/: +layout.svelte  +page.svelte
supabase/migrations/: 20250607124936_remote_schema.sql
web/: package.json
web/src/: app.d.ts  hooks.server.ts
(+150 files in other folders)
