[package]
name = "rpg_club_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "rpg_club_core"

[features]
default = []
typegen = ["crux_core/typegen", "crux_http/typegen"]

[dependencies]
rpg_club_model = { path = "../rpg_club_model" }
crux_core = { workspace = true, features = ["typegen"] }
crux_http = { workspace = true, features = ["typegen"] }
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
wasm-bindgen = "0.2.95"
